# bootcampSQL_modern_data_stack

./: README.md  main.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: dag_dbt.py  main.py  pipeline.py
